testcases/negative/invalid_version_format.vcf
BEGIN:VCARD
VERSION:four point zero
FN:John Doe
END:VCARD
